--- a/index.html
+++ b/index.html
@@ -677,13 +677,57 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="partnership">
         <div class="container">
             <div class="template-title">
                 <h2>Ready to collaborate?</h2>
                 <h3>Register cargo</h3>
             </div>
+            <div class="partnership__content">
+                <div class="partnership__content-item">
+                    <p>
+                        • In order to start cooperation, it is necessary to register the cargo indicating information about the
+                        contents of the cargo, its cost and quantity. And also attaching the photo to the application.
+                    </p>
+                    <p>
+                        • If it is necessary to check the conformity of the goods with the quantity, then when processing the goods on
+                        our site indicate this in the box "Note". This service is for a fee of 3 RMB per order. Any additional
+                        inspections of the cargo are discussed individually including their cost.
+                    </p>
+                    <p>
+                        • Before shipping the goods to our warehouse in China, be sure to make a labeling, with your order number on
+                        our website, for each outer box so that we can identify exactly your cargo. If you can’t do it yourself, ask
+                        your supplier.
+                    </p>
+                </div>
+                <div class="partnership__content-item order-mobile-negative">
+                    <img src="assets/img/partner 1.png" alt="partner" />
+                </div>
+                <div class="partnership__content-item">
+                    <img src="assets/img/partner 2.png" alt="partnership" />
+                </div>
+                <div class="partnership__content-item">
+                    <p>
+                        • After shipping the cargo to our warehouse in China, you must specify a track number for tracking parcels to
+                        China for each position in the order. You can enter the track number on the order page. The track number is
+                        another measure to identify your shipment in our warehouse.
+                    </p>
+                    <p>
+                        • If you have processed the goods according to our instructions and have done everything correctly, when you
+                        receive your goods in a warehouse in China, the status of the order will change to "In stock".
+                    </p>
+                    <p>
+                        • Upon receipt of the goods to the warehouse and change the status of the order, you will receive a
+                        notification by e-mail indicated during registration. The letter will include current information on the
+                        order, including date of receipt, order number and further steps to process it.
+                    </p>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <section>
+        <div class="container"></div>
     </section>
 
 </main>
