--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </header>
 
 <main class="wrapper home">
-    <section class="swiper swiper-banner" style="--header-height: 200px">
+    <section id="request" class="swiper swiper-banner" style="--header-height: 200px">
         <div class="swiper-wrapper">
             <div class="swiper-slide" style="background-image: url(assets/img/banner-1.png)">
                 <div class="container">
@@ -247,7 +247,7 @@
             </div>
         </div>
     </section>
-    <section class="delivery">
+    <section id="delivery" class="delivery">
         <div class="container">
             <div class="template-title">
                 <h2>Options for shipping goods from China</h2>
@@ -410,7 +410,7 @@
             </div>
         </div>
     </section>
-    <section class="services bg-accent">
+    <section id="services" class="services bg-accent">
         <div class="container">
             <div class="template-title">
                 <h2>Services</h2>
@@ -485,7 +485,7 @@
         </div>
     </section>
 
-    <section class="company">
+    <section id="company" class="company">
         <div class="container">
             <div class="company-description">
                 <div class="template-title template-title_case-2">
@@ -677,7 +677,7 @@
             </div>
         </div>
     </section>
-    <section class="partnership">
+    <section class="partnership bg-accent">
         <div class="container">
             <div class="template-title">
                 <h2>Ready to collaborate?</h2>
@@ -731,8 +731,63 @@
     </section>
 
 </main>
-<footer>
-    Footer
+<footer class="footer">
+    <section class="container">
+        <div class="container__footer">
+            <div class="footer__element">
+                <img src="assets/img/Rectangle-footer.png" alt="line">
+            </div>
+            <div class="content">
+                <div id="contacts" class="footer__brand">
+                    <a href="#" class="footer__logo"><img src="/assets/img/logo.svg" alt="logo"></a>
+                    <p class="footer__phone">8(800)600-18-69</p>
+                    <a href="mailto:info@cargosause.info" class="footer__email">info@cargosause.info</a>
+                    <p class="footer__address">
+                        Address in China: <br> 深圳市宝安区航城街道三围社区 兴围第三工业区6号厂房
+                    </p>
+                    <p class="footer__phone-cn">15966660379</p>
+                    <div class="footer__socials">
+                        <a href="#"><img src="assets/img/icon-instagram.png" alt="Instagram"></a>
+                        <a href="#"><img src="assets/img/icon-facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="assets/img/icon-telegram.png" alt="Telegram"></a>
+                    </div>
+                </div>
+                <div class="footer__navigation">
+                    <div class="footer__nav">
+                        <h4 class="footer__title">Cargo transportation</h4>
+                        <ul class="footer__list">
+                            <li><a href="#delivery">Prices and terms</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#company">About company</a></li>
+                            <li><a href="#contacts">Contacts</a></li>
+                            <li><a href="#request">Register the cargo</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav">
+                        <h4 class="footer__title">Services</h4>
+                        <ul class="footer__list">
+                            <li><a href="#services">Redemption of goods</a></li>
+                            <li><a href="#services">Cargo insurance</a></li>
+                            <li><a href="#services">Warehouse rental</a></li>
+                            <li><a href="#services">Transfer of funds</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__nav">
+                        <h4 class="footer__title">Information</h4>
+                        <ul class="footer__list">
+                            <li><a href="#">Reviews</a></li>
+                            <li><a href="#">Requirements for cargo</a></li>
+                            <li><a href="#">Offer agreement</a></li>
+                            <li><a href="#">How to conclude an agreement</a></li>
+                            <li><a href="#">Methods of payment for services</a></li>
+                            <li><a href="#">Documents</a></li>
+                            <li><a href="#">Articles</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </footer>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/swiper-bundle.min.js"></script>
