--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             </div>
             <div class="content">
                 <div id="contacts" class="footer__brand">
-                    <a href="#" class="footer__logo"><img src="/assets/img/logo.svg" alt="logo"></a>
+                    <a href="#" class="footer__logo"><img src="assets/img/logo.svg" alt="logo"></a>
                     <p class="footer__phone">8(800)600-18-69</p>
                     <a href="mailto:info@cargosause.info" class="footer__email">info@cargosause.info</a>
                     <p class="footer__address">
