--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                     <p class="footer__phone">8(800)600-18-69</p>
                     <a href="mailto:info@cargosause.info" class="footer__email">info@cargosause.info</a>
                     <p class="footer__address">
-                        Address in China: <br> 深圳市宝安区航城街道三围社区 兴围第三工业区6号厂房
+                        Address in China: <br> 浙江省金华市义乌市后宅街道洪华小区5 <br> 栋一单元一楼RT789库房 高建军 电话
                     </p>
                     <p class="footer__phone-cn">15966660379</p>
                     <div class="footer__socials">
